Add option to hide UI element while dragging

--- a/Languages/Czech/Keyed/MouseDollyMapper.xml
+++ b/Languages/Czech/Keyed/MouseDollyMapper.xml
@@ -14,4 +14,5 @@
   <Merthsoft.MouseDollyMapper.ClickAnyMouseButton>Klikněte na libovolné tlačítko myši...</Merthsoft.MouseDollyMapper.ClickAnyMouseButton>
   <Merthsoft.MouseDollyMapper.DisableWhenColonistSelected>Zakázat posun kamery, pokud je vybrán kolonista.</Merthsoft.MouseDollyMapper.DisableWhenColonistSelected>
   <Merthsoft.MouseDollyMapper.DisableArchitectOnRightMouse>Zakázat nabídku Architekt po kliknutí pravým tlačítkem myši.</Merthsoft.MouseDollyMapper.DisableArchitectOnRightMouse>
+  <Merthsoft.MouseDollyMapper.HideMainUiButtonsWhenDragging>Při přetahování skrýt hlavní tlačítka UI</Merthsoft.MouseDollyMapper.HideMainUiButtonsWhenDragging>
 </LanguageData>
